Finished teh NotesManagerTests