@@ -1,8 +1,7 @@
 package com.cab302.peerpractice.Model;
 
 import java.awt.image.AreaAveragingScaleFilter;
-import java.util.ArrayList;
-import java.util.List;
+import java.util.*;
 
 public class MockNotesDao implements INotesDAO {
 
@@ -18,58 +17,91 @@ public class MockNotesDao implements INotesDAO {
 
 
     @Override
-    public int addNote(Note note) {
-
+    public String addNote(Note note) {
+        notes.add(note);
+        return UUID.randomUUID().toString();
     }
 
     @Override
-    public void updateNote(String noteID, String column, String value) {
-
+    public void changeName(String noteID, String name){
+        for(Note n : notes){
+            if(n.getID().equals(noteID)){n.setName(name);}
+        }
     }
 
     @Override
     public void deleteNote(String noteID) {
-
+        notes.removeIf(n -> n.getID().equals(noteID));
     }
 
     @Override
-    public List<Note> getNotes(String groupID) {
-        return List.of();
+    public List<Note> getNotes(int groupID) {
+        List<Note> nts = notes.stream()
+                .filter(n -> n.getGroup() == groupID )
+                .toList();
+        return Collections.unmodifiableList(nts);
     }
 
     @Override
     public Note getNote(String noteID) {
-        return null;
+        return notes.stream().filter(n -> n.getID().equals(noteID)).findFirst().orElse(null);
     }
 
     @Override
-    public int addChapter(String noteID, Chapter chapter) {
+    public List<Note> getAllNotes() {
+        return Collections.unmodifiableList(notes);
+    }
 
+    @Override
+    public String addChapter(String noteID, Chapter chapter) {
+        Note note = notes.stream()
+                .filter(n -> n.getID().equals(noteID))
+                .findFirst()
+                .orElse(null);
+        note.addChapter(chapter);
+        chapters.add(chapter);
+        return UUID.randomUUID().toString();
     }
 
     @Override
     public void updateChapter(String chapterID, String column, String value) {
-
+        Chapter chapter = chapters.stream()
+                .filter(c -> c.getID().equals(chapterID))
+                .findFirst()
+                .orElse(null);
+        if(column.equals("name")){chapter.setName(value);}
+        else if(column.equals("content")){chapter.setContent(value);}
     }
 
     @Override
     public void deleteChapter(String chapterID) {
-
+        chapters.removeIf(c -> c.getID().equals(chapterID));
     }
 
     @Override
     public List<Chapter> getChapters(String noteID) {
-        return List.of();
+        List<Chapter> ch = chapters.stream()
+                .filter(c -> c.getNote().equals(noteID))
+                .toList();
+        return Collections.unmodifiableList(ch);
     }
 
     @Override
     public Chapter getChapter(String chapterID) {
-        return null;
+        return chapters.stream()
+                .filter(c -> c.getID().equals(chapterID))
+                .findFirst()
+                .orElse(null);
     }
 
     @Override
-    public int addAttachment(String chapterID, Attachment attachment) {
-
+    public String addAttachment(String chapterID, Attachment attachment) {
+        Chapter chapter = chapters.stream()
+                .filter(c -> c.getID().equals(chapterID))
+                .findFirst()
+                .orElse(null);
+        chapter.addAttachment(attachment);
+        return UUID.randomUUID().toString();
     }
 
     @Override
